--- a/MLT/Views/Flights/Create.cshtml
+++ b/MLT/Views/Flights/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MLT.Models.Flight
+﻿@model MLT.Models.FlightPath
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Flight</h4>
+<h4>Flights</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
