--- a/MLT/Views/Flights/Details.cshtml
+++ b/MLT/Views/Flights/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MLT.Models.Flight
+﻿@model MLT.Models.FlightPath
 
 @{
     ViewData["Title"] = "Details";
@@ -6,7 +6,7 @@
 
 <h1>Details</h1>
 
-<div
+<div>
     <h4>Flight</h4>
     <hr />
     <dl class="row">
