--- a/MLT/Areas/Admin/Views/AdminFlightPaths/Delete.cshtml
+++ b/MLT/Areas/Admin/Views/AdminFlightPaths/Delete.cshtml
@@ -8,25 +8,25 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Flight</h4>
+    <h4>FlightPath</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FlightID)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FlightID);
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.FlightID)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Origin)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Origin)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Destination)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Destination)
         </dd>
     </dl>
