--- a/MLT/Areas/StaffMember/Views/StaffMemberAircraft/Index.cshtml
+++ b/MLT/Areas/StaffMember/Views/StaffMemberAircraft/Index.cshtml
@@ -4,13 +4,22 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>MLT Aircraft</h1>
+<h1>Index</h1>
 
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.AircraftType)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.AircraftIdent)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AircraftState)
             </th>
             <th></th>
         </tr>
@@ -19,9 +28,16 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.AircraftType)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.AircraftIdent)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.AircraftState)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a>
             </td>
         </tr>
