--- a/MLT/Areas/StaffMember/Views/StaffMemberFlightPaths/Create.cshtml
+++ b/MLT/Areas/StaffMember/Views/StaffMemberFlightPaths/Create.cshtml
@@ -6,21 +6,21 @@
 
 <h1>Create</h1>
 
-<h4>Flights</h4>
+<h4>FlightPath</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Origin" class="control-label"></label>
-                <input asp-for="Origin" class="form-control" />
-                <span asp-validation-for="Origin" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="FlightID" class="control-label"></label>
                 <input asp-for="FlightID" class="form-control" />
                 <span asp-validation-for="FlightID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Origin" class="control-label"></label>
+                <input asp-for="Origin" class="form-control" />
+                <span asp-validation-for="Origin" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Destination" class="control-label"></label>
