--- a/MLT/Views/Flights/Index.cshtml
+++ b/MLT/Views/Flights/Index.cshtml
@@ -4,20 +4,12 @@
     ViewData["Title"] = "Index";
 }
 <h1>MLT Flights</h1>
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
+
     <table class="table">
         <thead>
             <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.FlightID) @* Added per Update *@
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Origin)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Destination)
                 </th>
                 <th></th>
             </tr>
@@ -30,15 +22,7 @@
                         @Html.DisplayFor(modelItem => item.FlightID)  @* Added per Update *@
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Origin)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Destination)
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a>
                     </td>
                 </tr>
             }
