--- a/MLT/Views/Shared/_PartialAdminMenu.cshtml
+++ b/MLT/Views/Shared/_PartialAdminMenu.cshtml
@@ -10,7 +10,7 @@
         <li class="nav-item" dropdown show">
             <a class="dropdown-toggle btn btn-outline-secondary btn-sm mr-1" href="#" data-toggle="dropdown">Admin</a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" asp-area="Admin" asp-controller="Users">All-Users</a>
+                <a class="dropdown-item" asp-area="Admin">All-Users</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" asp-area="Admin" asp-controller="AdminFlightPaths" asp-action="Index">FlightPaths</a>
                 <a class="dropdown-item" asp-area="Admin" asp-controller="AdminAircraft" asp-action="Index">Aircraft</a>
