--- a/MLT/Views/Shared/_PartialStaffMenu.cshtml
+++ b/MLT/Views/Shared/_PartialStaffMenu.cshtml
@@ -7,8 +7,8 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "StaffMember"))
     {
-        <li class="nav-item" dropdown show">
-            <a class="dropdown-toggle btn btn-outline-secondary btn-sm mr-1" href="#" data-toggle="dropdown">Staff-Menu</a>
+        <li class="nav-item dropdown show">
+            <a class="dropdown-toggle btn btn-outline-secondary btn-sm" href="#" data-toggle="dropdown">Staff-Menu</a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" asp-area="StaffMember" asp-controller="StaffMemberFlightPaths" asp-action="Index">FlightPaths</a>
                 <a class="dropdown-item" asp-area="StaffMember" asp-controller="StaffMemberAircraft" asp-action="Index">Aircraft</a>
