--- a/MLT/Views/Shared/_PartialAdminMenu.cshtml
+++ b/MLT/Views/Shared/_PartialAdminMenu.cshtml
@@ -7,10 +7,12 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Admin"))
     {
-        <li class="nav-item" dropdown show">
-            <a class="dropdown-toggle btn btn-outline-secondary btn-sm mr-1" href="#" data-toggle="dropdown">Admin</a>
+        <li class="nav-item dropdown show">
+            <a class="dropdown-toggle btn btn-outline-secondary btn-sm" href="#" data-toggle="dropdown">Admin</a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" asp-area="Admin">All-Users</a>
+                <a class="dropdown-item" asp-area="Admin" asp-controller="UserManager">User_Manager</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" asp-area="Admin" asp-controller="RoleManager">Role_Manager</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" asp-area="Admin" asp-controller="AdminFlightPaths" asp-action="Index">FlightPaths</a>
                 <a class="dropdown-item" asp-area="Admin" asp-controller="AdminAircraft" asp-action="Index">Aircraft</a>
