--- a/MLT/Views/Shared/_PartialAdminMenu.cshtml
+++ b/MLT/Views/Shared/_PartialAdminMenu.cshtml
@@ -8,7 +8,7 @@
     @if (SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Admin"))
     {
         <li class="nav-item dropdown show">
-            <a class="dropdown-toggle btn btn-outline-secondary btn-sm" href="#" data-toggle="dropdown">Admin</a>
+            <a class="dropdown-toggle btn btn-outline-secondary btn-sm " href="#" data-toggle="dropdown" aria-expanded="false">Admin</a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" asp-area="Admin" asp-controller="UserManager">User_Manager</a>
                 <div class="dropdown-divider"></div>
